public enum Answer {
    CORRECT,
    TOO_HIGH,
    TOO_LOW
}
