public interface IGuesser {

    int makeGuess();

    void guessFeedback(Answer answer);
}