public interface IThinker {

    Answer evaluateGuess(int guess, String opponent);
}